# aoc2021

./: .gitignore  README.md  aoc2021.cabal
src/: AOCUtils.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Utils.hs
