cabal-version: 3.0
name:          aoc2021
version:       0.1.0.0
author:        'Joseph Morag'
maintainer:    jm@josephmorag.com
data-files:    data/**

library
  build-depends:
    , attoparsec
    , base              <5
    , bytestring
    , directory
    , file-embed
    , hspec
    , lens
    , relude            ^>=1.0
    , template-haskell
    , text
    , vector

  hs-source-dirs:     src
  ghc-options:        -fno-warn-partial-type-signatures
  exposed-modules:
    AOCUtils
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Day07
    Day08
    Day09
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day20
    Day21
    Day22
    Day23
    Day24
    Day25

  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    NoStarIsType
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumDecimals
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
